[gd_scene load_steps=15 format=3 uid="uid://bpnynw3larqxl"]

[ext_resource type="Script" path="res://Scene/Gameplay/ArrowKeysOnScreen.gd" id="1_tty31"]
[ext_resource type="Texture2D" uid="uid://jqk0rt0vh1q1" path="res://Textures/UI/T_ArrowUp.png" id="1_wnsm0"]
[ext_resource type="Texture2D" uid="uid://btoxtybs2byra" path="res://Textures/UI/T_ArrowLeft.png" id="2_xoj3q"]
[ext_resource type="Texture2D" uid="uid://c7p47wvmu83fs" path="res://Textures/UI/T_ArrowRight.png" id="3_dikem"]
[ext_resource type="Texture2D" uid="uid://boa7wbjx2cigh" path="res://Textures/UI/T_ArrowDown.png" id="4_vd6ii"]
[ext_resource type="Texture2D" uid="uid://dho1cdpa22evd" path="res://Textures/UI/T_ArrowSpace.png" id="5_ee3hr"]
[ext_resource type="AudioStream" uid="uid://1l51wgyfjnfr" path="res://Sound/SFX/Character/SFX_Input1.wav" id="7_4i2hg"]
[ext_resource type="AudioStream" uid="uid://bmg0um78r5iik" path="res://Sound/SFX/Character/SFX_Input2.wav" id="8_gl0ml"]

[sub_resource type="PlaneMesh" id="PlaneMesh_030dw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2eil"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("1_wnsm0")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_operator = 1
emission_texture = ExtResource("1_wnsm0")
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_22fes"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("2_xoj3q")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_operator = 1
emission_texture = ExtResource("2_xoj3q")
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oawy0"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("3_dikem")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_operator = 1
emission_texture = ExtResource("3_dikem")
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3wfex"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("4_vd6ii")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_operator = 1
emission_texture = ExtResource("4_vd6ii")
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q5i4n"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("5_ee3hr")
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_operator = 1
emission_texture = ExtResource("5_ee3hr")
texture_filter = 0

[node name="ArrowKeysOnScreen" type="Node3D"]
script = ExtResource("1_tty31")

[node name="ArrowUp" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-09, 0.1, 0, 4.37114e-09, 1.91069e-16, -0.1, -0.1, -4.37114e-09, -4.37114e-09, 0, 0.36427, 0.0312638)
mesh = SubResource("PlaneMesh_030dw")
surface_material_override/0 = SubResource("StandardMaterial3D_h2eil")

[node name="ArrowLeft" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-09, 0.1, 0, 4.37114e-09, 1.91069e-16, -0.1, -0.1, -4.37114e-09, -4.37114e-09, 0, 0.169629, 0.157124)
mesh = SubResource("PlaneMesh_030dw")
surface_material_override/0 = SubResource("StandardMaterial3D_22fes")

[node name="ArrowRight" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-09, 0.1, 0, 4.37114e-09, 1.91069e-16, -0.1, -0.1, -4.37114e-09, -4.37114e-09, 0, 0.169629, -0.158017)
mesh = SubResource("PlaneMesh_030dw")
surface_material_override/0 = SubResource("StandardMaterial3D_oawy0")

[node name="ArrowDown" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-09, 0.1, 0, 4.37114e-09, 1.91069e-16, -0.1, -0.1, -4.37114e-09, -4.37114e-09, 0, 0.169629, 0)
mesh = SubResource("PlaneMesh_030dw")
surface_material_override/0 = SubResource("StandardMaterial3D_3wfex")

[node name="SpaceBar" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-09, 0.1, -4.37114e-09, 0, -4.37114e-09, -0.1, -0.1, -4.37114e-09, 1.91069e-16, 0, 0.157212, -0.343902)
mesh = SubResource("PlaneMesh_030dw")
surface_material_override/0 = SubResource("StandardMaterial3D_q5i4n")

[node name="SFX_Input1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4i2hg")
volume_db = -30.0

[node name="SFX_Input2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_gl0ml")
volume_db = -30.0
